--- a/natural_language_processing/topic_modeling/requirements.txt
+++ b/natural_language_processing/topic_modeling/requirements.txt
@@ -1,12 +1,19 @@
 appnope==0.1.2
 attrs==20.3.0
 backcall==0.2.0
+blis==0.7.4
+catalogue==1.0.0
+certifi==2020.12.5
+chardet==4.0.0
 click==7.1.2
 cycler==0.10.0
+cymem==2.0.5
 decorator==4.4.2
+en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-2.3.1/en_core_web_sm-2.3.1.tar.gz
 funcy==1.15
 future==0.18.2
 gensim==3.8.3
+idna==2.10
 iniconfig==1.1.1
 ipykernel==5.4.2
 ipython==7.19.0
@@ -19,6 +26,7 @@ jupyter-core==4.7.0
 kiwisolver==1.3.1
 MarkupSafe==1.1.1
 matplotlib==3.3.3
+murmurhash==1.0.5
 nltk==3.5
 numexpr==2.7.2
 numpy==1.19.4
@@ -28,7 +36,9 @@ parso==0.8.1
 pexpect==4.8.0
 pickleshare==0.7.5
 Pillow==8.0.1
+plac==1.1.3
 pluggy==0.13.1
+preshed==3.0.5
 prompt-toolkit==3.0.8
 ptyprocess==0.7.0
 py==1.10.0
@@ -40,12 +50,18 @@ python-dateutil==2.8.1
 pytz==2020.5
 pyzmq==20.0.0
 regex==2020.11.13
+requests==2.25.1
 scipy==1.5.4
 six==1.15.0
 smart-open==4.0.1
+spacy==2.3.5
+srsly==1.0.5
+thinc==7.4.5
 toml==0.10.2
 tornado==6.1
 tqdm==4.55.0
 traitlets==5.0.5
+urllib3==1.26.2
+wasabi==0.8.0
 wcwidth==0.2.5
 wordcloud==1.8.1
